--- a/details.html
+++ b/details.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/details.css">
     <title>MyCommerce</title>
 </head>
 <body>
@@ -16,10 +17,10 @@
     <main>
         <section id="product-details" class="container">
             <div class="card mb20">
-                <div class="card-top">
+                <div class="product-details-top line-bottom">
                     <img src="img/notebook.png" alt="Notebook">
                 </div>
-                <div class="card-bottom">
+                <div class="product-details-bottom">
                     <h3>R$5000,00</h3>
                     <h4>Notebook Gamer</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore fuga neque distinctio veritatis quia laboriosam asperiores ducimus est soluta et, sunt dicta perferendis assumenda unde minima voluptatum rem voluptatem animi.</p>
